[package]
name = "nema-parser"
version = "0.1.4"
edition = "2021"
authors = ["Julian Bolivar"]
description = "A parser for NEMA sentences"
license = "MIT"
repository = "https://github.com/BolivarTech/nema-parser"
readme = "README.md"
keywords = ["parser", "nema", "gps", "glonass", "galileo"]


[dependencies]
serialport = "4.7"
